Transform Alum to Aldmg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,12 @@ cmake_minimum_required(VERSION 2.8)
 cmake_policy(SET CMP0015 NEW)
 
 # Set the project name.
-project(ALUM C)
+project(DMGLFA C)
 
 # Tell CMake to search first in the cmake subdirectory for FIND_PACKAGE() or INCLUDE().
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/)
 
 include(CheckCSourceCompiles)
-include(CheckCXXSourceCompiles)
 
 if(CMAKE_COMPILER_IS_GNUCC)
  set(COMPILER_GCC 1)
@@ -24,30 +23,30 @@ find_package(Allegro50 REQUIRED)
 # Set include and lib dirs. 
 include_directories(${ALLEGRO_INCLUDE_DIR})
 
-set(ALUM_LIBS ${LIBS} ${ALLEGRO_LIBRARIES})
+set(DMGLFA_LIBS ${LIBS} ${ALLEGRO_LIBRARIES})
 
 include_directories("include")
-include(AlumFiles)
+include(DmglfaFiles)
 
 # Alum test exes in the bin subdir (first one should work, but doesnt, hmmm...)
 set(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 # Compile all files except main
-add_library(ALUM_OBJECTS OBJECT ${ALUM_SRC_FILES})
-# Alps test exectable
-add_executable(alum $<TARGET_OBJECTS:ALUM_OBJECTS> src/main.c)
-target_link_libraries(alum ${ALUM_LIBS})
+add_library(DMGLFA_OBJECTS OBJECT ${DMGLFA_SRC_FILES})
+# Test exectable
+add_executable(dmglfa $<TARGET_OBJECTS:DMGLFA_OBJECTS> src/main.c)
+target_link_libraries(dmglfa ${DMGLFA_LIBS})
 
-set(ALUM_REFMAN_INDEX  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman/index.html)
-set(ALUM_REFMAN  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman)
-set(ALUM_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/doc/nd)
-set(ALUM_ND_IN   ${CMAKE_CURRENT_SOURCE_DIR})
-set(ALUM_ND /opt/naturaldocs/NaturalDocs)
+set(DMGLFA_REFMAN_INDEX  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman/index.html)
+set(DMGLFA_REFMAN  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman)
+set(DMGLFA_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/doc/nd)
+set(DMGLFA_ND_IN   ${CMAKE_CURRENT_SOURCE_DIR})
+set(DMGLFA_ND /usr/bin/naturaldocs)
 
 add_custom_target(docs
-    ${ALUM_ND} -i ${ALUM_ND_IN} -p ${ALUM_ND_IN} -o HTML ${ALUM_REFMAN}
-    DEPENDS ${ALUM_SRC_FILES}
-    SOURCES ${ALUM_SRC_FILES}
+    ${DMGLFA_ND} -i ${DMGLFA_ND_IN} -p ${DMGLFA_ND_IN} -o HTML ${DMGLFA_REFMAN}
+    DEPENDS ${DMGLFA_SRC_FILES}
+    SOURCES ${DMGLFA_SRC_FILES}
     VERBATIM
   )
 
