First widgets seem to work fine and are quite fast too!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 cmake_policy(SET CMP0015 NEW)
 
 # Set the project name.
-project(DMGLFA C)
+project(ALDMG C)
 
 # Tell CMake to search first in the cmake subdirectory for FIND_PACKAGE() or INCLUDE().
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/)
@@ -23,30 +23,34 @@ find_package(Allegro50 REQUIRED)
 # Set include and lib dirs. 
 include_directories(${ALLEGRO_INCLUDE_DIR})
 
-set(DMGLFA_LIBS ${LIBS} ${ALLEGRO_LIBRARIES})
+set(ALDMG_LIBS ${LIBS} m ${ALLEGRO_LIBRARIES})
 
 include_directories("include")
-include(DmglfaFiles)
+include(AldmgFiles)
 
 # Alum test exes in the bin subdir (first one should work, but doesnt, hmmm...)
 set(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
-# Compile all files except main
-add_library(DMGLFA_OBJECTS OBJECT ${DMGLFA_SRC_FILES})
-# Test exectable
-add_executable(dmglfa $<TARGET_OBJECTS:DMGLFA_OBJECTS> src/main.c)
-target_link_libraries(dmglfa ${DMGLFA_LIBS})
+set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
-set(DMGLFA_REFMAN_INDEX  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman/index.html)
-set(DMGLFA_REFMAN  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman)
-set(DMGLFA_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/doc/nd)
-set(DMGLFA_ND_IN   ${CMAKE_CURRENT_SOURCE_DIR})
-set(DMGLFA_ND /usr/bin/naturaldocs)
+# Compile all files except main
+add_library(ALDMG_OBJECTS OBJECT ${ALDMG_SRC_FILES})
+add_library(aldmg_static ${ALDMG_SRC_FILES})
+add_library(aldmg SHARED ${ALDMG_SRC_FILES})
+# Test exectable
+add_executable(test_aldmg $<TARGET_OBJECTS:ALDMG_OBJECTS> src/main.c)
+target_link_libraries(test_aldmg ${ALDMG_LIBS})
+
+set(ALDMG_REFMAN_INDEX  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman/index.html)
+set(ALDMG_REFMAN  ${CMAKE_CURRENT_SOURCE_DIR}/doc/refman)
+set(ALDMG_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/doc/nd)
+set(ALDMG_ND_IN   ${CMAKE_CURRENT_SOURCE_DIR})
+set(ALDMG_ND /usr/bin/naturaldocs)
 
 add_custom_target(docs
-    ${DMGLFA_ND} -i ${DMGLFA_ND_IN} -p ${DMGLFA_ND_IN} -o HTML ${DMGLFA_REFMAN}
-    DEPENDS ${DMGLFA_SRC_FILES}
-    SOURCES ${DMGLFA_SRC_FILES}
+    ${ALDMG_ND} -i ${ALDMG_ND_IN} -p ${ALDMG_ND_IN} -o HTML ${ALDMG_REFMAN}
+    DEPENDS ${ALDMG_SRC_FILES}
+    SOURCES ${ALDMG_SRC_FILES}
     VERBATIM
   )
 
